#1011 Tests de la nova API REST per React