@@ -391,7 +391,9 @@
 					<systemPropertyVariables>
 						<es.caib.notib.properties.path>src/test/resources/es/caib/notib/core/test.properties</es.caib.notib.properties.path>
 					</systemPropertyVariables>
-<!--					<argLine>-XX:MaxPermSize=512m</argLine>-->
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+					</argLine>
 				</configuration>
             </plugin>
 			<plugin>
